# Mastering-C-Game-Engine-Programming

./: README.md  links_of_interest.md
chapter-01/compackt/: CMakeLists.txt
chapter-01/compackt/engine/: CMakeLists.txt
chapter-01/compackt/engine/include/compackt/: Engine.h
chapter-01/compackt/engine/src/: Engine.cpp
chapter-01/compackt/game/: CMakeLists.txt
chapter-01/compackt/game/src/: main.cpp
chapter-02/compackt/: CMakeLists.txt
chapter-02/compackt/engine/: CMakeLists.txt
chapter-02/compackt/engine/include/compackt/: Engine.h
chapter-02/compackt/engine/include/compackt/math/: Vec2.h  Vec2.inl
chapter-02/compackt/engine/include/compackt/time/: FixedTimestepController.h  ITimestepController.h  IUpdatable.h  TimeSystem.h  VariableTimestepController.h
chapter-02/compackt/engine/src/: Engine.cpp
chapter-02/compackt/engine/src/time/: FixedTimestepController.cpp  TimeSystem.cpp  VariableTimestepController.cpp
chapter-02/compackt/game/: CMakeLists.txt
chapter-02/compackt/game/src/: MovingPointSimulation.cpp  MovingPointSimulation.h  main.cpp
